# aoc-2023

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
data/: timings.json
data/examples/: 24.txt
data/viz/: 23-1-opt.dot  23-1.dot  23-2-opt.dot  23-2.dot
proptest-regressions/util/: max_bit_set_trie.txt
src/: lib.rs
src/template/: run_multi.rs
src/util/: bit_matrix.rs  bit_set.rs  char_grid.rs  coord.rs  indexer.rs  max_bit_set_trie.rs  mod.rs  shortest_path.rs  vec_map.rs  vec_set.rs  vec_table.rs
