[package]
name = "advent_of_code"
version = "0.10.0"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[profile.release]
lto = true

[profile.dhat]
inherits = "release"
debug = 1

[features]
dhat-heap = ["dhat"]
today = ["chrono"]
test_lib = []

[dependencies]
arrayvec = "0.7.4"

# Template dependencies
chrono = { version = "0.4.31", optional = true }
dhat = { version = "0.3.2", optional = true }
enum_dispatch = "0.3.12"
itertools = "0.12.0"
nom = "7.1.3"
num = "0.4.1"
pico-args = "0.5.0"
rayon = "1.8.0"
tinyjson = "2.5.1"

# Solution dependencies
